# educational-papers-viewer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PODCAST_CREATOR_V2.md  README.md  package-lock.json  package.json  production-server.js
api/: package-lock.json  package.json  server.js
api/api/: package-lock.json  package.json
backend/: .env.example  API_AUDIT.md  Dockerfile  PODCAST_REFACTORING.md  README.md  README_PODCAST_GENERATOR.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  generate_podcast_from_prompt.py  main.py  pyproject.toml  pytest.ini  research_agent.py  start.sh
backend/lib/: batch_processing.py  custom_podcast.py  paper_import.py  pdf_analyzer.py  podcast_creator.py  podcast_generator.py  podcast_production.py  research.py  rss_feed.py  storage.py  youtube_clips.py
backend/lib/core/: __init__.py  extraction_service.py  gemini_client.py
backend/lib/podcasts/: __init__.py  agent.py  audio.py  script.py  tools.py
backend/migrations/: README.md  create_episode_papers_table.sql  podcast_creator_schema.sql
backend/output/: podcast_20251130_201002.txt
backend/papers_viewer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routers/: __init__.py  admin.py  papers.py  podcasts.py  search.py
backend/tests/: README.md  conftest.py  test_extraction_integration.py  test_lib_modules.py  test_podcast_generation.py  test_search.py
src/: App.css  App.tsx  config.ts  supabase.ts
src/components/: AdminDashboard.tsx  AdminLogin.tsx  CustomEpisodeCreator.tsx  PDFViewer.tsx  PaperImport.tsx  PaperProcessing.tsx  (+6 more)
(+27 files in other folders)
